fixed spacing on containers in login and reg

--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -56,7 +56,7 @@ nav a {
 
 /* Specific styles for active links */
 .link-active {
-    color: var(-quaternary);
+    color: var(--quaternary);
     font-weight: bold;
 }
 
